Fix extra whitespace from appearing

--- a/src/components/Dashboard/styles.css
+++ b/src/components/Dashboard/styles.css
@@ -1,8 +1,3 @@
 .dashboard {
-    background-color: blue;
-
-    display: grid;
-    justify-content: center;
-    grid-template-rows: 75vh;
-    /* z-index: 10 */
+  background-color: white;
 }
